PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2004-06-29: - A fitting quickbar typo (Origin of time -> Argument of peri-
              astron) fixed. Thanks to Dirk Terrell for pointing this out!
2004-05-28: - PHOEBE successfully compiled under Fedora Core 2. Thanks to
              Dirk Terrell for reporting this!
2004-05-26: - Independent variable selection wasn't saved to the keyword
              file, it is now fixed. Also, HJD is now adopted instead of
              phase as the default choice.
2004-05-21: - Re-arranged the HJD->phase formula in phoebe_transformations.c
              to avoid precision problems.
2004-05-08: - The tooltip text of the Base PHOEBE directory in the Configu-
              ration window was misleading; fixed. Many thanks to Carla
              Maceroni for pointing this out!
            - PHOEBE compiles and installs under Gentoo Linux without is-
              sues. Many thanks to Mike Sallman for pointing this out!
2004-05-03: - Top-level README file updated.
            - PHOEBE-0.24 released.
            - PHOEBE 0.24 reported to install and run without issues under
              Linux SuSE 9.0. Many thanks to Jan Skalicky for pointing this
              out!
2004-04-26: - Stale WD98 label from the Configuration window removed.
            - Top-level README file updated for the upcoming 0.24 version.
              Other top-level files slightly updated.
            - Top-level AUTHORS updated with Dirk's affiliation.
2004-04-25: - Plot limits for 3D stellar plots increased to +/- 1.3a rather
              than +/- 1a, since a noticeable fraction of all plots went
              out of plot bounds. The plot is a bit smaller now, but it
              shouldn't be too inconvenient. 0.3x version will handle this
              properly. The limits are changed for both SM and GnuPlot.
            - configure.in updated with the plotting package test: if both