@@ -1,4 +1,4 @@
-PHOEBE-0.24 TOPLEVEL DOCUMENTATION                              MAY 3rd, 2004
+PHOEBE-0.25 TOPLEVEL DOCUMENTATION                            JULY 23rd, 2004
 -----------------------------------------------------------------------------
 
 Hello and thank you for your interest in PHOEBE.
